--- a/life_expectancy_gdp.ipynb
+++ b/life_expectancy_gdp.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "## Data\n",
     "* Supplied by the WHO and World Bank\n",
-    "* Life expectancy and GDP for countries frm 2000 to 2014\n",
+    "* Life expectancy and GDP for countries from 2000 to 2015\n",
     "* This data does not contain any PII that needs to be protected\n",
     "\n",
     "## Analysis\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -169,31 +169,6 @@
    ],
    "source": [
     "countries = all_data.Country.unique()\n",
-    "\n",
-    "def showGraphs(country, data):\n",
-    "    country_data = data[data.Country == country]\n",
-    "#     print(country_data.head(2))\n",
-    "    plt.subplot(1,2,1)\n",
-    "    plt.plot(country_data.Year, country_data.GDP)\n",
-    "    country_label = country\n",
-    "    if (country == 'United States of America'):\n",
-    "        country_label = 'United States'\n",
-    "    plt.title('GDP for {} over time'.format(country_label))\n",
-    "    plt.xlabel(\"Year\")\n",
-    "    plt.ylabel(\"GDP (USD)\")\n",
-    "    plt.ylim(bottom=0)\n",
-    "    # plt.show()\n",
-    "    # plt.clf()\n",
-    "    \n",
-    "    plt.subplot(1,2,2)\n",
-    "    plt.plot(country_data.Year, country_data.Expectancy)\n",
-    "    plt.title('Life Expectancy for {}'.format(country_label))\n",
-    "    plt.xlabel(\"Year\")\n",
-    "    plt.ylabel(\"Life Expectancy (Years)\")\n",
-    "    plt.ylim(bottom=30)\n",
-    "    plt.subplots_adjust(wspace=.4)\n",
-    "    plt.show()\n",
-    "    plt.clf()\n",
     "\n",
     "def show_gdp_expectancy(data):\n",
     "    plt.title(\"GDP by Country\")\n",
@@ -233,9 +208,9 @@
     "    * Between 2000 and 2004, life expectancy in Zimbambwe actually dropped.  This may have been caused by conflicts, sanctions or food crises and also reflects in higher values for other countries that may not have been subjected to these conditions.\n",
     "    \n",
     "## Some countries see a dip in GDP \n",
-    "* Germany, Mexico, Chile and have seen declines immediately prior to 2014\n",
+    "* Germany, Mexico, Chile and have seen declines immediately prior to 2015\n",
     "    * Investigate the cause of these declines and research what measures can be put in place to reverse these declines\n",
-    "* Zimbabwe's GDP more than tripled from ~$4.4B to ~16.3B between 2008 and 2014.  Like the improvement in life expectancy, this may also reflect a relatively peaceful period\n",
+    "* Zimbabwe's GDP more than tripled from ~$4.4B to ~16.3B between 2008 and 2015.  Like the improvement in life expectancy, this may also reflect a relatively peaceful period\n",
     "    * Zimbabwe's GDP is dwarfed by others, but a more realistic indicator against other countries is GDP per capita, which we don't have the data for"
    ]
   }
